--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Пример веб-страницы</title>
- </head>
- <body>
-  <h1>Заголовок</h1>
-  <!-- Комментарий -->
-  <p>Первый абзац.</p>
-  <p>Второй абзац.</p>
-  <p>Третий абзац.</p>
-  <p>Четвертый абзац.</p>
-  <p>Пятый абзац</p>
- </body>
-</html>
+<div class="uCalc_321518"></div>
+
+<script> 
+var widgetOptions321518 = { bg_color: "transparent" }; 
+(function() {
+ var a = document.createElement("script"), h = "head"; 
+ a.async = true; 
+ a.src = (document.location.protocol == "https:" ? "https:" : "http:") + "//ucalc.pro/api/widget.js?id=321518&t="+Math.floor(new Date()/18e5); document.getElementsByTagName(h)[0].appendChild(a) 
+ })();
+</script>
